# Urban-Resilience-Pipeline

./: .env  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
doc_urban_resilience_pipeline/: 1 - Architecture and narrative  Urban Resilience Dashboard (Environmental-Social).md  1.5 - Technical Architecture - Urban Resilience Dashboard.md  2 - Project Lifecycle Checklist - Urban Resilience (Execution Focus).md  3 - Implementation Checklist - Urban Resilience (Environmental).md  4 - Finalization and Portfolio Checklist - Urban Resilience (Presentation Focus).md
doc_urban_resilience_pipeline/.obsidian/: workspace.json
scripts/: extract_air_quality.py
spark_jobs/: process_air_quality.py
sql_models/: merge_air_quality.sql
