[project]
name = "urban-resilience-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.10.1",
    "ipython>=9.12.0",
    "pydantic>=2.13.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
