[project]
name = "urban-resilience-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.4",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.10.1",
    "ipython>=9.12.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
